# modular

./: .gitignore  Cargo.toml  GEMINI.md  README.md
.github/workflows/: ci.yml
assets/: README.md
demos/: audio_demo.rs  breakout.rs  complete_game.rs  ecs_demo.rs  graphical_pong.rs  improved_pong.rs  input_demo.rs  particle_demo.rs  physics_demo.rs  pong.rs  pong_demo.rs  rendering_demo.rs  shader.wgsl  simple_graphical_pong.rs  ui_demo.rs  window_pong.rs
docs/: PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  SYSTEM_ARCHITECTURE.md  getting_started.md  introduction.md  roadmap.md
docs/systems/: AI_SYSTEM.md  ECS_SYSTEM.md  PHYSICS_SYSTEM.md  ai.md  audio.md  components.md  input.md  rendering.md
docs/systems/audio/: design.md
docs/systems/ecs/: implementation.md
docs/systems/event_system/: design.md  implementation.md
docs/systems/input/: design.md
docs/systems/physics/: implementation.md
docs/systems/plugin_system/: design.md  implementation.md
docs/systems/rendering/: design.md
docs/systems/resource_management/: design.md  implementation.md
docs/systems/ui/: design.md  implementation.md
examples/: using_extracted_systems.rs
src/: ai.rs  audio.rs  components.rs  difficulty.rs  ecs.rs  enhanced_ai.rs  events.rs  font.rs  game_loop.rs  game_state.rs  input.rs  input_window.rs  lib.rs  menu.rs  particles.rs  physics.rs  plugins.rs  renderer_2d.rs  rendering.rs  resources.rs  scoring.rs  systems.rs  trail_system.rs  ui.rs  visual_effects.rs  window.rs
